<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.kebabsandregrets.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/caucasus2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/christoffer"
                android:textColor="#000000"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/christoffer_satisfaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/christoffer_regrets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:onClick="kebabC"
                android:text="@string/kebab" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:onClick="plovC"
                android:text="@string/plov" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:onClick="regretC"
                android:text="@string/regret" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/patrick"
                android:textColor="#000000"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/patrick_satisfaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/patrick_regrets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:onClick="kebabP"
                android:text="@string/kebab" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:onClick="plovP"
                android:text="@string/plov" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:onClick="regretP"
                android:text="@string/regret" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/resetAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:onClick="resetAll"
        android:text="@string/reset" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/resetAll"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:onClick="robbedByPolice"
        android:text="@string/robbed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/satisfaction"
        android:textColor="#000000"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/regrets"
        android:textColor="#000000"
        android:textSize="18sp" />

</RelativeLayout>